[tool.poetry]
name = "dora-implementation"
version = "0.1.0"
description = ""
authors = ["Vitor Sousa <vitorsousavhcs@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
torch = "2.4.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
