[tool.poetry]
name = "dora-implementation"
version = "0.1.0"
description = ""
authors = ["Vitor Sousa <vitorsousavhcs@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
torch = "2.4.0"
jupyter = "^1.0.0"
ruff = "^0.5.5"
black = "^24.4.2"
bandit = "^1.7.9"
mkdocs = "1.6.0"
mkdocs-gen-files = "0.5.0"
mkdocs-material = "9.5.25"
mkdocstrings = "0.25.1"
mkdocstrings-python = "1.10.3"
mkdocs-autorefs = "0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
